<resources>
    <string name="app_name">Todolist</string>
    <string name="action_settings">Settings</string>

    <string name="task_name">Task Name</string>
    <string name="task_description">Description</string>
    <string name="task_due_date">Due Date</string>
    <string name="task_due_date_button">Select Due Date</string>
    <string name="task_due_time">Due Time</string>
    <string name="task_due_time_button">Select Due Time</string>
    <string name="task_done">Done</string>


    <string name="new_task">New Task</string>
    <string name="title_activity_new_task">NewTaskActivity</string>


</resources>
